Add slide explaining my absence last Tuesday

--- a/slides.tex
+++ b/slides.tex
@@ -39,6 +39,13 @@
   \end{columns}
 \end{frame}
 
+\begin{frame}
+  \frametitle{My Excuse}
+  \begin{center}
+    \includegraphics[width=320]{img/calvin.jpg}
+  \end{center}
+\end{frame}
+
 
 \begin{frame}
   \frametitle{Logistics}
