Update link to Github repository

--- a/slides.tex
+++ b/slides.tex
@@ -51,7 +51,7 @@
   \frametitle{Logistics}
   
   \begin{itemize}
-    \item GitHub Repository: \href{https://github.com/apetresc/api}{https://github.com/apetresc/api}
+    \item GitHub Repository: \href{https://github.com/apetresc/rotman-api}{https://github.com/apetresc/rotman-api}
     \item Notebook: \href{https://rac.rotman.utoronto.ca/jupyter/user/ut_apetrescu/lab/tree/Day1.ipynb}{RAC Link}
   \end{itemize}
 \end{frame}
