Some day2 changes from last year

--- a/day2.tex
+++ b/day2.tex
@@ -54,8 +54,8 @@
 
 \begin{frame}
   \frametitle{Web Architecture}
-  \framesubtitle{In Its Modern Form}
-  \includegraphics[width=320pt]{img/web-architecture-2.png}
+  \framesubtitle{In Its Simplest Form}
+  \includegraphics[width=320pt]{img/web-architecture-1.png}
 \end{frame}
 
 
@@ -284,5 +284,13 @@ def bft(g, root):
     \end{Verbatim}
   \end{block}
 \end{frame}
+
+
+\begin{frame}
+  \frametitle{Web Architecture}
+  \framesubtitle{In Its Modern Form}
+  \includegraphics[width=320pt]{img/web-architecture-2.png}
+\end{frame}
+
 
 \end{document}
