--- a/day1.tex
+++ b/day1.tex
@@ -18,8 +18,8 @@
 
 \title[Data Acquisition via APIs]{Data Acquisition via Application Programmable Interfaces}
 \author{Adrian Petrescu}
-\institute{Rubikloud}
-\date{2018-10-25}
+\institute{Kinaxis}
+\date{2021-10-28}
 
 \begin{document}
 \frame{\titlepage}
@@ -35,21 +35,13 @@
 
     \column{0.5\textwidth}
     \textbf{Adrian Petrescu} \\
-    Chief Engineer at Rubikloud
+    Distinguished Architect at Kinaxis
   \end{columns}
 \end{frame}
 \note{\begin{itemize}
   \item Talk about Twitsprout
   \item Talk about Maluuba's use of Google, Nuance, Platform APIs
 \end{itemize}}
-
-\begin{frame}
-  \frametitle{My Excuse}
-  \begin{center}
-    \includegraphics[width=320pt]{img/calvin.jpg}
-  \end{center}
-\end{frame}
-
 
 \begin{frame}
   \frametitle{Logistics}
