Update Day 2 slides for 2021

--- a/day2.tex
+++ b/day2.tex
@@ -18,10 +18,11 @@
 
 \title[Data Acquisition via APIs]{Data Acquisition via Application Programmable Interfaces}
 \author{Adrian Petrescu}
-\institute{Rubikloud}
-\date{2018-11-12}
+\institute{Kinaxis}
+\date{2021-11-04}
 
 \begin{document}
+
 \frame{\titlepage}
 
 
@@ -251,7 +252,7 @@
 
   \begin{block}{Common flags}
     \begin{Verbatim}
-      $ wget -r -l inf -N -p [base-url]
+      $ wget -e robots=off -r -np [base-url]
     \end{Verbatim}
   \end{block}
 
